# jxl-c

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  PLAN.md  README.md  preflight_parity.sh
.github/workflows/: ci.yml  sanitizers.yml
fuzz/: decode_fuzzer.c  jxl_fuzz_decode.c  jxl_fuzz_decode.h
include/jxl_oxide/: jxl_context.h  jxl_oxide.h  jxl_status.h  jxl_types.h
scripts/: bench_st_compare.sh  bisect_test_crop.sh  bootstrap.sh  export_jxl_c_repo.sh  fix_brace_inits.py  fix_designated_inits.py  fix_dup_decls.py  fix_positional_brace_inits.py  gen_decode_oracles.sh  hoist_block_decls.py  hoist_for_decls.py  rust_root.sh
src/: allocator.c  allocator.h  aux_box.c  aux_box.h  codestream_collect.c  codestream_collect.h  container_reader.c  container_reader.h  context.c  context.h  decoder.c  decoder_init.c  deps_check.c  deps_check.h  static_assert.h  status.c
src/bitstream/: bitstream.c  bitstream.h  consts.c  consts.h  error.c  error.h  unpack.h
src/bitstream/container/: box_header.c  box_header.h  box_type.h  brotli_decode.c  brotli_decode.h  parser.c  parser.h
src/coding/: ans.c  ans.h  ans_read_inline.h  cdecoder.c  cdecoder_hoisted_inline.h  cdecoder_modular_internal.h  cdecoder_private.h  coding.h  cutil.c  decoder.h  error.h  integer_read_inline.h  internal.h  permutation.c  prefix.c  prefix.h  util.h
src/frame/: error.h  filter.c  filter.h  fnoise.c  frame.c  frame.h  frame_header.c  frame_header.h  fspline.c  hf_global.c  hf_global.h  lf_global.c  lf_global.h  lf_global_modular.c  lf_global_modular.h  lf_group.c  lf_group.h  noise.h  pass_group.c  pass_group.h  patch.c  patch.h  spline.h  toc.c  toc.h  util.h
src/grid/: aligned_grid.c  aligned_grid.h  alloc_tracker.c  alloc_tracker.h  error.h  grid.h  mutable_subgrid.c  mutable_subgrid.h  shared_subgrid.c  shared_subgrid.h
src/image/: icc_decode.c  icc_decode.h  icc_parse.c  icc_parse.h  image_header.c  image_internal.h  image_metadata.c  parse_helpers.c  parse_helpers.h  size_header.c
src/jbr/: bit_writer.c  bit_writer.h  data.c  data.h  error.h  header.c  header.h  huffman.c  huffman.h  output.c  output.h  reconstruct.c  reconstruct.h  scan.c  scan.h
src/modular/: channel.c  channel.h  channel_decode.c  channel_decode.h  channel_decode_internal.h  channel_decode_slow.c  error.h  float_export.h  float_export_row.c  group_decode.c  group_decode.h  group_subimage.c  group_subimage.h  image.c  image.h  ma.c  ma.h  ma_flat.c  ma_flat.h  ma_flat_inline.h  ma_tree.h  modular.h  modular_parse.c  modular_parse.h  mutil.c  param.c  param.h  predictor.c  predictor.h  predictor_state.c  predictor_state.h  predictor_state_inline.h  prepare_subimage.c  prepare_subimage.h  recursive_image.c  recursive_image.h  region.c  region.h  sample.c  sample.h  (+5 more)
src/modular/transform/: inverse.c  inverse.h  rct.c  rct_avx2.c  rct_internal.h  rct_neon.c  squeeze.c  squeeze.h  squeeze_avx2.c  squeeze_internal.h  squeeze_neon.c  squeeze_sse41.c  squeeze_wasm128.c  transform.c  transform.h
src/render/: blend.c  blend.h  cms_lcms.c  cms_lcms.h  color_encoding_util.c  color_encoding_util.h  color_transform.c  color_transform.h  color_transform_apply.c  color_transform_apply.h  composite.c  composite.h  error.h  image_buffer.c  image_buffer.h  keyframe_render.c  linear_srgb_icc.inc  modular_blit_avx2.c  modular_compose.c  modular_compose.h  modular_encode.c  modular_encode.h  modular_render.c  modular_render.h  modular_sample.c  modular_sample.h  patch_render.c  patch_render.h  render_buffer.c  render_buffer.h  render_frame.c  render_frame.h  render_internal.h  render_util.c  render_util.h  subgrid_f32.c  subgrid_f32.h
src/render/color/: color_transform_avx2.c  color_transform_internal.h  color_transform_neon.c  color_transform_sse41.c  fastmath.c  fastmath.h  fastmath_avx2.c  fastmath_internal.h  fastmath_neon.c  fastmath_neon_internal.h  fastmath_sse41.c  gamut.c  gamut.h  gamut_avx2.c  gamut_internal.h  gamut_neon.c  gamut_sse41.c  opsin.c  opsin_avx2.c  opsin_internal.h  opsin_neon.c  pq.c  pq.h  pq_avx2.c  pq_internal.h  pq_neon.c  pq_sse41.c  rec2408.c  rec2408.h  rec2408_avx2.c  rec2408_internal.h  rec2408_neon.c  rec2408_sse41.c  tone_map.c  tone_map.h  tone_map_avx2.c  tone_map_internal.h  tone_map_neon.c  tone_map_sse41.c
src/render/features/: noise.c  noise.h  spline.c  spline.h  upsampling.c  upsampling.h
src/vardct/: dct_select.c  dct_select.h  dequant.c  dequant.h  dequant_expand.c  dequant_expand.h  error.h  hf_coeff.c  hf_coeff.h  hf_metadata.h  hf_pass.c  hf_pass.h  lf.c  lf.h  util.h  vardct.h  vutil.c
tests/: test_paths.h
tests/coding/: ans_synthetic.inc
tests/conformance/: conformance_cases.inc  conformance_compare.c  conformance_compare.h  conformance_npy.c  conformance_npy.h  gen_conformance_cases.py  test_conformance_fixture.c  test_crop_conformance.c
tests/container/: codestream_digests.inc  collect_codestream.c  collect_codestream.h  sha256.c  sha256.h  test_container_fixtures.c  test_container_verify.c
tests/frame/: frame_fields.inc
tests/header/: header_fields.inc  test_header_gen.c  test_header_verify.c
tests/oracle/: golden_buf_zst.c  golden_buf_zst.h  test_fixture_oracle.c
tests/unit/: test_allocator.c  test_aux_box.c  test_bitstream.c  test_brotli_alloc.c  test_clone_gray.c  test_cms_alloc.c  test_coding_synthetic.c  test_color_simd.c  test_context.c  test_decoder_animation.c  test_decoder_aux.c  test_decoder_stub.c  test_deps.c  test_dequant_hf.c  test_epf_sse41.c  test_frame_parse.c  test_gabor_simd.c  test_genshin_cafe.c  test_grid.c  test_group_pipeline.c  test_helpers.h  test_icc_parse.c  test_icc_skip.c  test_jbr.c  test_minecraft_px440.c  test_modular.c  test_modular_decode.c  test_modular_group_e2e.c  test_modular_lf_quant.c  test_modular_parse.c  test_noise_convolve.c  test_opsin_simd.c  test_pass_group.c  test_prereq_ref_composite.c  test_progressive_pg0.c  test_rct_simd.c  test_render_dct.c  test_render_varblocks.c  test_size_header.c  test_squeeze_simd.c  (+4 more)
tools/: bench_decode.c  gen_decode_oracles.c
win32/: bench_decode.vcxproj  bench_decode.vcxproj.filters
(+77 files in other folders)
